# kclassify

./: .gitignore  .mbaridoc.json  README.md  delme.txt  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  test_local.sh
.github/workflows/: ci.yml
data/: train_stats.json
docker/: Dockerfile
docs/: CHANGELOG.md  arguments.md  data.md  index.md  mkdocs.yml  run_aws.md  run_local.md
src/: argparser.py  compute_stats.py  conf.py  focal_loss.py  plot.py  scheduler.py  stopping.py  train.py  transfer_model.py
